# RichErrors

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  Err2Code_8h.html  Err2Code_8h__dep__incl.dot  Err2Code_8h__incl.dot  Err2Code_8h_source.html  Err2Code_8hpp.html  Err2Code_8hpp__incl.dot  Err2Code_8hpp_source.html  InfoMap_8h.html  InfoMap_8h__dep__incl.dot  InfoMap_8h__incl.dot  InfoMap_8h_source.html  InfoMap_8hpp.html  InfoMap_8hpp__dep__incl.dot  InfoMap_8hpp__incl.dot  InfoMap_8hpp_source.html  LICENSE.txt  README.md  RichErrors.sln  RichErrors_8h.html  RichErrors_8h__dep__incl.dot  RichErrors_8h__incl.dot  RichErrors_8h_source.html  RichErrors_8hpp.html  RichErrors_8hpp__dep__incl.dot  RichErrors_8hpp__incl.dot  RichErrors_8hpp_source.html  _err2_code_8h.html  _err2_code_8h_source.html  _err2_code_8hpp.html  _err2_code_8hpp_source.html  _info_map_8h.html  _info_map_8h_source.html  _info_map_8hpp.html  _info_map_8hpp_source.html  _rich_errors_8h.html  _rich_errors_8h_source.html  (+52 more)
.github/workflows/: apidoc.yml  build.yml  ci.yml
doc/: .gitignore  Doxyfile  Doxyfile.in  meson.build
include/: meson.build
include/RichErrors/: Err2Code.h  Err2Code.hpp  InfoMap.h  InfoMap.hpp  RichErrors.h  RichErrors.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+14 more)
src/: DynArray.c  InfoMap.c  RichErrors.c  Threads.c  Threads.h  meson.build
src/RichErrors/: DynArray.c  DynArray.h  Err2Code.c  InfoMap.c  InfoMap.h  RichErrors.c  RichErrors.vcxproj  RichErrors.vcxproj.filters  SmallMap.c  SmallMap.h  Threads.c  Threads.h  meson.build
subprojects/: .gitignore
test/: DynArrayTests.cpp  Err2CodeCppTests.cpp  Err2CodeTests.cpp  InfoMapTests.cpp  RichErrorsCppTests.cpp  RichErrorsTests.cpp  meson.build
test/RichErrorsTests/: DynArrayTests.cpp  Err2CodeCppTests.cpp  Err2CodeTests.cpp  InfoMapCppTests.cpp  InfoMapTests.cpp  RichErrorsCppTests.cpp  RichErrorsTests.cpp  RichErrorsTests.vcxproj  RichErrorsTests.vcxproj.filters  SmallMapTests.cpp  TestDefs.h  main.cpp  meson.build
test/catch2/: catch.hpp.license
