# C headers
install_headers(
        'RichErrors/Err2Code.h',
        'RichErrors/InfoMap.h',
        'RichErrors/RichErrors.h',
        subdir: 'RichErrors')

# C++ headers
install_headers(
        'RichErrors/Err2Code.hpp',
        'RichErrors/InfoMap.hpp',
        'RichErrors/RichErrors.hpp',
        subdir: 'RichErrors')
