public_c_headers = files(
        'RichErrors/Err2Code.h',
        'RichErrors/InfoMap.h',
        'RichErrors/RichErrors.h',
        )

public_cpp_headers = files(
        'RichErrors/Err2Code.hpp',
        'RichErrors/InfoMap.hpp',
        'RichErrors/RichErrors.hpp',
        )

install_headers(public_c_headers, subdir: 'RichErrors')
install_headers(public_cpp_headers, subdir: 'RichErrors')
