# This file is part of RichErrors.
# Copyright 2019-2022 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: BSD-2-Clause

public_c_headers = files(
    'RichErrors/Err2Code.h',
    'RichErrors/InfoMap.h',
    'RichErrors/RichErrors.h',
)

public_cpp_headers = files(
    'RichErrors/Err2Code.hpp',
    'RichErrors/InfoMap.hpp',
    'RichErrors/RichErrors.hpp',
)

install_headers(
    public_c_headers,
    subdir: 'RichErrors',
)

install_headers(
    public_cpp_headers,
    subdir: 'RichErrors',
)
